--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
 				<span class="inp">Volleyball</span>
 			</div>
 			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
+				<i class="fa fa-fork-o in"></i>
 				<span class="inp">Eating</span>
-			</div>
-			<div class="col-div-3 col3">
-				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Sports</span>
 			</div>
 		</div>
 	</div>
