--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 				<span class="inp">Volleyball</span>
 			</div>
 			<div class="col-div-3 col3">
-				<i class="fa fa-fork-o in"></i>
+				<i class="fa fa-futbol-o in"></i>
+				<span class="inp">Volleyball</span>
+			</div>
+			<div class="col-div-3 col3">
+				<i class="fa fa-futbol-o in"></i>
 				<span class="inp">Eating</span>
 			</div>
 		</div>
