--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 			<div class="col-div-3 col3">
 				<i class="fa fa-futbol-o in"></i>
-				<span class="inp">Volleyball</span>
+				<span class="inp">Tiktok</span>
 			</div>
 			<div class="col-div-3 col3">
 				<i class="fa fa-futbol-o in"></i>
