--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			Grumo<br>
 			<span>Denise G.</span>
 		</h1>
-		<p class="p3">Curriculum Virtae</p>
+		<p class="p3">Curriculum Vitae</p>
 
 		<br>	
 		<h2 class="heading">Education Background</h2>
